--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
 
       <div class="movie-list-container">
-        <h2>NEW RELEASES</h2>
+        <h2>POPULAR</h2>
         <div class="movie-list-wrapper">
           <div class="movie-list">
             <div class="movie-list-item">
@@ -176,7 +176,7 @@
       </div>
 
       <div class="movie-list-container">
-        <h2>NEW RELEASES</h2>
+        <h2>TRENDS</h2>
         <div class="movie-list-wrapper">
           <div class="movie-list">
             <div class="movie-list-item">
