--- a/index.html
+++ b/index.html
@@ -229,6 +229,6 @@
     </div>
   </div>
   
-  <footer style="height:50px;background-color:#151515;"></footer>
+  <footer></footer>
   <script src="index.js"></script>
 </body>
