--- a/index.html
+++ b/index.html
@@ -229,6 +229,6 @@
     </div>
   </div>
   
-  <footer></footer>
+  <footer><div class="footer-text">Hello. Developed by Prashanth Mittakola </div></footer>
   <script src="index.js"></script>
 </body>
